--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -5,6 +5,9 @@ Outreachy eligibility results
 {% endblock %}
 
 {% block content %}
+
+<p><b>Do not use the browser back button to update your initial application. You will experience website errors.</b> If you filled out the application wrong, <a href="/contact/">contact Outreachy organizers</a></p>
+
 {% if application.approval_status == application.APPROVED %}
 
 	<h1>Initial application approved for Outreachy</h1>
