Update GSoC wording
We've gotten emails from several people who are confused about the
Google Summer of Code requirement. Try to be clearer about the
requirement.

--- a/home/templates/home/eligibility.html
+++ b/home/templates/home/eligibility.html
@@ -17,7 +17,7 @@
 <p>Outreachy is open internationally to people who meet the following requirements:<p>
 <ul>
 	<li>You are or will be 18 years of age or older by {{ current_round.internstarts }}</li>
-	<li>You have not previously participated in an Outreachy, Outreach Program for Women, or Google Summer of Code internship. If you did not finish your Google Summer of Code internship, you are ineligible for Outreachy.</li>
+	<li>You have not previously participated in an Outreachy, Outreach Program for Women, or Google Summer of Code internship. People who participated as an intern for Google Summer of Code are not eligible for Outreachy. All Google Summer of Code participants are ineligible for Outreachy, including people who did not successfully finish their GSoC internship.</li>
 	<li>You are available for a full-time, 40 hours a week internship from {{ current_round.internstarts }} to {{ current_round.internends }}.</li>
 	<li>You must meet one of the following criteria:</li>
 	<ul>
