--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -35,10 +35,16 @@ Outreachy eligibility results
 	This may be due to one of several reasons:
 	<ul>
 		<li>You may not be eligible to be paid as a contractor of a non-profit based in the United States of America. This could be due to being a legal minor (under 18), visa restrictions, U.S. sanctions programs, or U.S. export restrictions.</li>
-		<li>You may have already participated in Google Summer of Code.</li>
+		<li>You may have already participated in Google Summer of Code or a previous Outreachy round.</li>
 		<li>You may not have sufficiently explained why your application is aligned with the Outreachy program goal of supporting people from groups under-represented in the technology industry.</li>
 	</ul>
-	We have a list of <a href="/opportunities">other opportunities</a> that may be a better fit for you.
+	Please review your application below to ensure the information you submitted is correct.
+	</p>
+	<p>
+	If the information is incorrect, please <a href="/contact">contact the Outreachy organizers</a> to update it.
+	</p>
+	<p>
+	If the information is correct, please take a look at the list of <a href="/opportunities">other opportunities</a> that may be a better fit for you.
 	</p>
 
 {% elif application.approval_status == application.REJECTED and application.reason_denied == 'TIME' %}
@@ -196,17 +202,20 @@ Outreachy eligibility results
 
 {% elif application.approval_status == application.PENDING %}
 
-	<h1>Outreachy Application Pending</h1>
+	<h1>Your Initial Application is Under Review</h1>
 
-	<p>Your Outreachy initial application is pending review by the Outreachy organizers.
-	We have received a notification about your submitted eligibility information and will follow up with
-	additional questions for you via email.
+	<p>
+	Your initial application for Outreachy internships is being reviewed by the Outreachy organizers.
+	We have already received a notification about your initial application, and there is no need for you to send an additional email.
+       	We may follow up with additional questions for you via email.
+	You will receive an email when your initial application has been approved.
 	</p>
 	<p>
 	If you have not received a follow up email within a week,
 	please <a href="/contact">contact the Outreachy organizers</a>.
 	</p>
-	<p>You will not be able to record contributions or make a final application until your initial application has been approved.</p>
+	<p>You will not be able to record contributions or make a final application until your initial application has been approved.
+	Do not try to contact mentors or community coordinators until your initial application has been approved.</p>
 	{% if user.is_staff %}
 		<h2>Outreachy Organizer Actions</h2>
 		<p>
