--- a/home/templates/home/eligibility_wizard_gender.html
+++ b/home/templates/home/eligibility_wizard_gender.html
@@ -1,14 +1,13 @@
 {% extends "base.html" %}
 
 {% block title %}
-Are you eligible to apply to Outreachy?
+Outreachy Initial Application
 {% endblock %}
 
 {% block content %}
-<h1>Outreachy Eligibility Checking</h1>
+<h1>Outreachy Initial Application</h1>
 <p>
-These questions are used to determine eligibility for the Outreachy internships.
-This private data will only be seen by the <a href="/contact/">Outreachy organizers</a>.
+The answer to these questions will only be seen by the <a href="/contact/">Outreachy organizers</a>.
 It will not be shared with mentors, coordinators, or other applicants.
 </p>
 
