Make it clear it's United States of America for international people

--- a/home/templates/home/eligibility.html
+++ b/home/templates/home/eligibility.html
@@ -13,7 +13,7 @@
 
 <h2>Outreachy Supports Diversity in Tech</h2>
 
-<p>Outreachy expressly invites applicants who are women (both cis and trans), trans men, and genderqueer people to apply. We also expressly invite applications who are residents and nationals of the United States of any gender who are Black/African American, Hispanic/Latin@, Native American/American Indian, Alaska Native, Native Hawaiian, or Pacific Islander. Anyone who faces systematic bias or discrimination in the technology industry of their country is invited to apply.</p>
+<p>Outreachy expressly invites applicants who are women (both cis and trans), trans men, and genderqueer people to apply. We also expressly invite applications who are residents and nationals of the United States of America of any gender who are Black/African American, Hispanic/Latin@, Native American/American Indian, Alaska Native, Native Hawaiian, or Pacific Islander. Anyone who faces systematic bias or discrimination in the technology industry of their country is invited to apply.</p>
 
 <h2>Outreachy Eligibility Rules</h2>
 
