Fix Multikey dict error in project skills and communications form.
Fixes #222.

--- a/home/templates/home/project_channels_form.html
+++ b/home/templates/home/project_channels_form.html
@@ -46,6 +46,9 @@ information'.</p>
 		{% with forloop.counter as channel_number %}
 		<h2>Project Communication Channel #{{ channel_number }}</h2>
 		{{ f.media }}
+		{% for hidden in f.hidden_fields %}
+			{{ hidden }}
+		{% endfor %}
 		{% for field in f.visible_fields %}
 			{% if 'Funding secured' in field.label_tag %}
 				<div class="form-group card">
