Show announcement mailing list to applicants with too many time commitments

--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -54,7 +54,12 @@ Outreachy eligibility results
 	<p>
 	We're sorry, but based on the time commitment information your supplied on your initial application,
 	you don't have 7 consecutive weeks free from full-time commitments.
-	Please apply another round.
+	</p>
+	<p>
+	We encourage you to apply another round.
+	Please sign up for the
+	<a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/announce">Outreachy announcement mailing list</a>,
+	so you can be notified when the next application period opens.
 	</p>
 	<h2><strong>Your Time Commitments:</strong></h2>
 
