Shift language to Outreachy's program goals

--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -20,8 +20,7 @@ Past community participation in Outreachy
 {% endif %}
 </h1>
 
-<p>Outreachy provides internships to people from <a href="/apply/eligibility/">groups traditionally underrepresented in tech</a>.
-For more information about what Outreachy is and the deadlines for mentors and coordinators, <a href="/communities/cfp">read the Community Call for Participation page</a>.
+<p>Outreachy provides paid, remote, three-month internships. Outreachy's goal is to support diversity in Free and Open Source Software (FOSS). For more information about what Outreachy is and the deadlines for mentors and coordinators, <a href="/communities/cfp">read the Community Call for Participation page</a>.
 </p>
 
 <p>
