Start of application review summary view
There's no actions you can currently take on the applications,
but you can see a table of the pending and rejected applications.

Todo:
 - Create a separate detailed application view.

 - Add the actions staff can take on the summary and detail views.

 - Create a new class - ReviewerApproval - attached to a Comrade.
   (no need to create a separate view for granting permissions right
   now, just do it manually in the admin view)

 - Add field on the ApplicantApproval - OneToOne relationship through
   a Review class to a ReviewerApproval. This stores the Reviewer's
   recommendation and comments.

 - Add the actions reviewers can take on the applications

--- a/home/templates/home/snippet/dashboard_staff.html
+++ b/home/templates/home/snippet/dashboard_staff.html
@@ -1,3 +1,9 @@
+{% if pending_applications_count %}
+<h1>Pending Applications</h1>
+
+<p>There are <a href="{% url 'applicant-review-summary' %}">{{ pending_applications_count }} applications to review</a>.</p>
+{% endif %}
+
 <h1>Email Subscriptions</h1>
 
 <p>
